charts/snips/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: snips
  name: snips
  namespace: snips
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: ssh
  - name: metrics
    port: 9102
    protocol: TCP
    targetPort: metrics-http
  selector:
    app: snips
