charts/snips/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snips
  namespace: snips
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
    #nginx.ingress.kubernetes.io/auth-signin: https://oauth.imdevinc.com/oauth2/start
    #nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    #nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
spec:
  ingressClassName: nginx
  rules:
  - host: snips.imdevinc.com
    http:
      paths:
      - backend:
          service:
            name: snips
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
      - snips.imdevinc.com
      secretName: snips-tls
